@@ -1,3 +1,7 @@
+2015-01-31  Carl Hetherington  <cth@carlh.net>
+
+	* Fix error when using audio delay.
+
 2015-01-30  Carl Hetherington  <cth@carlh.net>
 
 	* Fix update of preview when video fade changes.
